--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
+  <link +
+    href="https://fonts.googleapis.com/css?family=Cuprum|Fira+Sans+Condensed|Manrope|Martel|Maven+Pro|Monda|Play|Signika|Yanone+Kaffeesatz:300,400,400i,700&display=swap"
+    + rel="stylesheet" + />
+
+  <link + rel="stylesheet" + href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" + />
 </head>
 
 <body>
@@ -18,6 +23,8 @@
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <!-- built files will be auto injected -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap4-duallistbox/4.0.2/jquery.bootstrap-duallistbox.min.js">
+  </script>
 </body>
 
 </html>
